# ShinyCounter

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  capture.rs  counter.rs  i18n.rs  icon.rs  lib.rs  main.rs  os_accent.rs  server.rs  storage.rs  theme.rs  types.rs  update.rs
src/app/: helpers.rs  mod.rs  state.rs  ui_counter.rs  ui_dialogs.rs  ui_history.rs  ui_main.rs  ui_picker.rs  ui_settings.rs
tests/: counter_flow.rs
