[package]
name = "shiny_counter"
version = "0.1.10"
edition = "2021"
rust-version = "1.92"
authors = ["ShinyCounter"]
description = "Cross-platform shiny Pokémon hunt counter driven by on-screen color sampling."
license = "MIT"

[lib]
name = "shiny_counter"
path = "src/lib.rs"

[[bin]]
name = "shiny_counter"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34.2", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.2"
image = { version = "0.25", default-features = false, features = ["png"] }
xcap = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tiny_http = "0.12"
anyhow = "1"
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
ureq = { version = "2.10", default-features = false, features = ["tls", "gzip", "json"] }
webbrowser = "1.0"
semver = "1.0"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio", "common-controls-v6"] }

[build-dependencies]
ico = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 1
